# api/manager.events.swagger.yml
@@ -26,12 +26,10 @@ components:
     Event:
       oneOf:
         - $ref: "#/components/schemas/NewChatEvent"
+        - $ref: "#/components/schemas/ChatClosedEvent"
         - $ref: "#/components/schemas/NewMessageEvent"
       discriminator:
         propertyName: eventType
-        mapping:
-          NewChatEvent: "#/components/schemas/EventType"
-          NewMessageEvent: "#/components/schemas/EventType"
 
     NewChatEvent:
       required: [ eventId, eventType, chatId, clientId, requestId, canTakeMoreProblems ]
@@ -44,6 +42,20 @@ components:
           $ref: "#/components/schemas/ChatID"
         clientId:
           $ref: "#/components/schemas/ClientID"
+        requestId:
+          $ref: "#/components/schemas/RequestID"
+        canTakeMoreProblems:
+          type: boolean
+
+    ChatClosedEvent:
+      required: [ chatId, eventId, eventType, requestId, canTakeMoreProblems ]
+      properties:
+        chatId:
+          $ref: "#/components/schemas/ChatID"
+        eventId:
+          $ref: "#/components/schemas/EventID"
+        eventType:
+          type: string
         requestId:
           $ref: "#/components/schemas/RequestID"
         canTakeMoreProblems:
@@ -74,6 +86,7 @@ components:
       type: string
       enum:
         - NewChatEvent
+        - ChatClosedEvent
         - NewMessageEvent
 
     EventID:
